Historical Simulation Graph issues 1. Fixed the graph alignment issue of IRR Analysis 2. Fixed the graph alignment issue of Income Analysis

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -4615,10 +4615,12 @@ background: #1D856C;
 
 .irrAbsltCls {
   width: 100%;
-  position: absolute;
+  /*position: absolute;
   bottom: 3rem;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%);*/
+  display: flex;
+  justify-content: space-between;
 }
 
 .irrAbsltCls .progressBarEachDiv {
@@ -4734,9 +4736,12 @@ background: #1D856C;
   background: #FFF;
   border: 1px solid #DFDFDF;
   border-radius: 12px;
-  padding: 32px 12px 32px 12px;
+  padding: 30px 12px 15px 12px;
   width: 100%;
   margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .irrCardPara1 {
